[package]
name = "violetta_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# Ollama
ollama-rs = { version = "0.1.5", features = ["stream"] }
# Files
simple-fs = { version = "0.1", features = ["full"] }
# Others
derive_more = { version = "1.0.0-beta", features = ["from"] }